Affichage de la map

--- a/Escape/Escape/Escape.vcxproj
+++ b/Escape/Escape/Escape.vcxproj
@@ -126,7 +126,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Hero.cpp" />
     <ClCompile Include="Jeu.cpp" />
+    <ClCompile Include="Particules.cpp" />
+    <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
